Translated index page

--- a/website/index.html
+++ b/website/index.html
@@ -12,12 +12,12 @@
 
 <div id="map" class="map"></div>
 <div class="info">
-    <h1>Innbyggere i Oslo kommune</h1>
-    <p class="intro">Sjekk hvor mange som bor i ulike deler av Oslo.<br/>Klikk på en rute eller <a href="" title="Klikk for å starte">marker et område</a>.</p>
-    <p class="select"><img class="hand" src="img/click.svg" width="40px">Klikk i kartet for å markere et område.<br/>Klikk på første punkt for å avslutte.</p>
-    <p>Bosatte i markert område: <span>0</span></p>
+    <h1>Covid cases in Scotland</h1>
+    <p class="intro">You can view and select clusters based on location<br/>Click on a cluster or <a href="" title="Klikk for å starte">select a grid region</a>.</p>
+    <p class="select"><img class="hand" src="img/click.svg" width="40px">Click on the map to mark an area.<br/>Click on the first point to exit.</p>
+    <p>Cased in selected area: <span>0</span></p>
     <svg class="legend" width="340" height="25"></svg>
-    <p class="small">Hver rute er 100 x 100 meter. Total befolkning for Oslo er 640 797.</p>
+    <p class="small">Each grid square is 100 by 100 meters.</p>
 </div>
 
 <script src="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.4.3/build/ol.js"></script>
