--- a/website/index.html
+++ b/website/index.html
@@ -1,28 +1,65 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Test index</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.4.3/css/ol.css" type="text/css">
+    <link rel="stylesheet"
+        href="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.4.3/css/ol.css" type="text/css">
     <link rel="stylesheet" href="css/map.css" type="text/css">
     <script src="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.4.3/build/ol.js"></script>
+    <style>
+        .bar {
+            fill: steelblue;
+        }
+
+        .map {
+            width: 100%;
+            height: 400px;
+        }
+
+        @media (min-width: 800px) {
+            .wrapper {
+                display: flex;
+            }
+
+            .half {
+                padding: 0 10px;
+                width: 50%;
+                float: left;
+            }
+        }
+    </style>
 </head>
+
 <body>
+    <div class="wrapper">
+        <div class="half">
+            <h4>Map</h4>
+            <div id="map" class="map"></div>
+        </div>
+        <div class="half">
+            <h4>Data</h4>
+            <svg class="chart"></svg>
+        </div>
+    </div>
+    <div class="info">
+        <h1>Covid cases based of Norway Municipality</h1>
+        <p class="intro">Check how many Covid cases in different parts of Norway.<br />Click on a tile or <a href=""
+                title="Klikk for å starte">select an area</a>.</p>
+        <p class="select"><img class="hand" src="img/click.svg" width="40px">Click on the map to mark an
+            area.<br />Click on the first point to exit.
+        </p>
+        <p>Cases in marked area: <span>0</span></p>
+        <svg class="legend" width="340" height="25"></svg>
+        <p class="small">Each route is 100 x 100 meters. The total covid cases for Oslo is 640,797</p>
+    </div>
 
-<div id="map" class="map"></div>
-<div class="info">
-    <h1>Innbyggere i Oslo kommune</h1>
-    <p class="intro">Sjekk hvor mange som bor i ulike deler av Oslo.<br/>Klikk på en rute eller <a href="" title="Klikk for å starte">marker et område</a>.</p>
-    <p class="select"><img class="hand" src="img/click.svg" width="40px">Klikk i kartet for å markere et område.<br/>Klikk på første punkt for å avslutte.</p>
-    <p>Bosatte i markert område: <span>0</span></p>
-    <svg class="legend" width="340" height="25"></svg>
-    <p class="small">Hver rute er 100 x 100 meter. Total befolkning for Oslo er 640 797.</p>
-</div>
-
-<script src="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.4.3/build/ol.js"></script>
-<script src="lib/ol.proj.UTM33N.js"></script>
-<script src="lib/d3.min.js"></script>
-<script src="js/map.js"></script>
+    <script src="lib/ol.proj.UTM33N.js"></script>
+    <script src="lib/d3.min.js"></script>
+    <script src="js/map.js"></script>
+    <script src="js/barchart.js"></script>
 </body>
+
 </html>
