--- a/website/index.html
+++ b/website/index.html
@@ -9,15 +9,24 @@
         href="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.4.3/css/ol.css" type="text/css">
     <link rel="stylesheet" href="css/map.css" type="text/css">
     <script src="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.4.3/build/ol.js"></script>
-    <style>
+    
+	<style>
+		.line {
+			fill: black;
+			stroke: black;
+			stroke-width: 1.5px;
+		}
+		
+		.map {
+            width: 100%;
+            height: 400px;
+        }
+	<!--
         .bar {
             fill: steelblue;
         }
 
-        .map {
-            width: 100%;
-            height: 400px;
-        }
+
 
         @media (min-width: 800px) {
             .wrapper {
@@ -30,10 +39,12 @@
                 float: left;
             }
         }
+	-->
     </style>
 </head>
 
 <body>
+	<!--
     <div class="wrapper">
         <div class="half">
             <h4>Map</h4>
@@ -43,6 +54,8 @@
             <h4>Data</h4>
             <svg class="chart"></svg>
         </div>
+	-->
+	<div id="map" class="map"></div>
     </div>
     <div class="info">
         <h1>Covid cases based of Norway Municipality</h1>
@@ -59,7 +72,8 @@
     <script src="lib/ol.proj.UTM33N.js"></script>
     <script src="lib/d3.min.js"></script>
     <script src="js/map.js"></script>
-    <script src="js/barchart.js"></script>
+    <!--<script src="js/barchart.js"></script>-->
+	<script src="js/linechart.js"></script>
 </body>
 
 </html>
