Updated positioning of paragraphs to display visualisation below map

--- a/website/index.html
+++ b/website/index.html
@@ -64,6 +64,8 @@
         <p class="select"><img class="hand" src="img/click.svg" width="40px">Click on the map to mark an
             area.<br />Click on the first point to exit.
         </p>
+	</div>
+	<div class="infop2">
         <p>Cases in marked area: <span>0</span></p>
         <svg class="legend" width="340" height="25"></svg>
         <p class="small">Each route is 100 x 100 meters. The total covid cases for Oslo is 640,797</p>
