--- a/website/index.html
+++ b/website/index.html
@@ -11,23 +11,29 @@
     <script src="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.4.3/build/ol.js"></script>
     
 	<style>
-		body { margin:0;position:relative;top:0;right:0;bottom:0;left:0; }
-		.line {
-			fill: none;
-			stroke: black;
-			stroke-width: 1.5px;
-		}
-		
-		.map {
-            width: 100%;
-            height: 400px;
-        }
-		
-		.vis {
-			position: absolute;
-			width: 100%;
-            height: 400px;
-		}
+	path { 
+		stroke-width: 1;
+		fill: none;
+		stroke-linejoin: round;
+		stroke-linecap: round;
+	}
+	
+	circle { 
+	  stroke-width: 1;
+	}
+	
+	.axis path,
+	.axis line {
+	  fill: none;
+	  stroke: grey;
+	  stroke-width: 1;
+	  shape-rendering: crispEdges;
+	}
+	
+	.legend, .label, .hover-text{
+		font-size: x-small;
+		background-color: white;
+	}
 	<!--
         .bar {
             fill: steelblue;
@@ -74,10 +80,11 @@
 	
 	<div class="vis">
 		<h5>Data</h5>
-		<svg class="chart"></svg>
+		<svg id=mylines width="960" height="500"></svg>
 	</div>	
 	
-    <script src="lib/ol.proj.UTM33N.js"></script>
+    <script src="https://d3js.org/d3.v3.min.js"></script>
+	<script src="lib/ol.proj.UTM33N.js"></script>
     <script src="lib/d3.min.js"></script>
     <script src="js/map.js"></script>
     <!--<script src="js/barchart.js"></script>-->
