--- a/website/index.html
+++ b/website/index.html
@@ -81,7 +81,16 @@
 	<div class="vis">
 		<h5>Data</h5>
 		<svg id=mylines width="960" height="500"></svg>
-	</div>	
+	</div>
+	
+	<div class="timescale">
+		<h5>Timescale</h5>
+		<section class="range-slider">
+		  <span class="rangeValues"></span>
+		  <input value="100" min="5" max="360" step="5" type="range">
+		  <input value="180" min="5" max="360" step="5" type="range">
+		</section>
+	</div>
 	
     <script src="https://d3js.org/d3.v3.min.js"></script>
 	<script src="lib/ol.proj.UTM33N.js"></script>
