User may now select different regions to view different graphs

--- a/website/index.html
+++ b/website/index.html
@@ -80,8 +80,26 @@
 	
 	<div class="vis">
 		<h5>Data</h5>
-		<svg id=mylines width="960" height="500"></svg>
+		<svg id=mylines width="1500" height="500"></svg>
+
+
+		<!-- Add 2 buttons -->
+		<button onclick="update('data/dataset.json')">Selected Area</button>
+		<button onclick="update('data/dataset2.json')">Oslo</button>
+		<button onclick="update('data/dataset3.json')">Norway</button>
+		<button onclick="update('data/dataset4.json')">Europe</button>		
+		<!--
+		<select>
+		  <option value="o1">Selected Area</option>
+		  <option value="o2">Oslo</option>
+		  <option value="o3">Norway</option>
+		  <option value="o4">Europe</option>
+		</select>
+		-->
+
 	</div>
+	
+
 	
 	<div class="timescale">
 		<h5>Timescale</h5>
